PM: grid - fix 1140 example on mobile

--- a/grunt/sass/wiki/_grid.scss
+++ b/grunt/sass/wiki/_grid.scss
@@ -34,7 +34,11 @@
 }
 
 @media (max-width:$mobile-width){
+  .grid-example{
+    width: 102%;
+  }
   #grid12,
+  #grid12-1140,
   #grid12-contents,
   #grid12-lightbox{
     height: auto;
